--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,15 @@
 venv
 *.pyc
 gestao_rh/__pycache__/
+static
+
+gestao_rh.pem
+media
+
+uwsgi.ini
+uwsgi_params
+*.bak
+*.dat
+*.pid
+*.dir
+local_settings.py
